test/bad/classes/struct05.px

class Class def
    Test x: 0
